--- a/assets/css/layout/_main.scss
+++ b/assets/css/layout/_main.scss
@@ -35,3 +35,27 @@ main{
         cursor: pointer;
     }
 }
+#preLoader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .content{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        animation: pre-loader-spin infinite 1.5s linear;
+        *{font-size: 2em;}
+    }
+}
+@keyframes pre-loader-spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+  }
