--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,7 @@ address {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -167,7 +167,7 @@ address {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -444,7 +444,7 @@ section:hover .section-title {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -592,7 +592,7 @@ header .active {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -666,6 +666,33 @@ main {
   cursor: pointer;
 }
 
+#preLoader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#preLoader .content {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  animation: pre-loader-spin infinite 1.5s linear;
+}
+#preLoader .content * {
+  font-size: 2em;
+}
+
+@keyframes pre-loader-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 footer {
   padding: 20px 0;
   background-color: #000;
@@ -709,7 +736,7 @@ footer .nav-bars {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -853,7 +880,7 @@ footer .nav-bars {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -980,7 +1007,7 @@ footer .nav-bars {
   text-transform: uppercase;
 }
 .service:hover .circle {
-  background-color: rgb(0, 128, 128);
+  background-color: teal;
   border-color: teal;
   color: black;
 }
@@ -1134,7 +1161,7 @@ footer .nav-bars {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
@@ -1255,7 +1282,7 @@ form input, form input[type=search], form textarea {
 }
 
 .bg-orange {
-  background-color: rgb(255, 145, 0);
+  background-color: #ff9100;
 }
 
 .bg-teal {
